// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render as link 1`] = `
Array [
  .c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c3 + .c1 {
  margin-left: 8px;
}

.c4 + .c1 {
  margin-left: 8px;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
  padding: 0 13px 0 13px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  border-radius: 2px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  cursor: pointer;
  border-color: rgba(204,204,204,1);
  border-style: solid;
  border-width: 1px;
}

.c2:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.04);
  border-color: rgba(204,204,204,1);
}

.c2:active {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.08);
  border-color: rgba(204,204,204,1);
}

.c2 + .c1 {
  margin-left: 8px;
}

<a
    aria-disabled={false}
    className="c0 c1 c2"
    href="test"
    onClick={[Function]}
    role="button"
  >
    Test
  </a>,
  .c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c3 + .c1 {
  margin-left: 8px;
}

.c4 + .c1 {
  margin-left: 8px;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
  padding: 0 13px 0 13px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  border-radius: 2px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  cursor: pointer;
  border-color: rgba(204,204,204,1);
  border-style: solid;
  border-width: 1px;
}

.c2:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.04);
  border-color: rgba(204,204,204,1);
}

.c2:active {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.08);
  border-color: rgba(204,204,204,1);
}

.c2 + .c1 {
  margin-left: 8px;
}

<a
    aria-disabled={false}
    className="c0 c1 c2"
    onClick={[Function]}
    role="button"
  >
    Test
  </a>,
]
`;

exports[`测试 marginLeft 1`] = `
.c0 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c3 + .c1 {
  margin-left: 8px;
}

.c4 + .c1 {
  margin-left: 8px;
}

.c5 + .c1 {
  margin-left: 8px;
}

.c6 + .c1 {
  margin-left: 8px;
}

.c7 + .c1 {
  margin-left: 8px;
}

.c8 + .c1 {
  margin-left: 8px;
}

.c9 + .c1 {
  margin-left: 8px;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
  padding: 0 13px 0 13px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  border-radius: 2px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  cursor: pointer;
  border-color: rgba(204,204,204,1);
  border-style: solid;
  border-width: 1px;
}

.c2:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.04);
  border-color: rgba(204,204,204,1);
}

.c2:active {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.08);
  border-color: rgba(204,204,204,1);
}

<button
  className="c0 c1 c2"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Test
</button>
`;

exports[`测试 prefix suffix 1`] = `
Array [
  .c0 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-right: 6px;
}

.c3 .c9 {
  line-height: unset;
}

.c4 + .c1 {
  margin-left: 8px;
}

.c5 + .c1 {
  margin-left: 8px;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
  padding: 0 13px 0 13px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  border-radius: 2px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  cursor: pointer;
  border-color: rgba(204,204,204,1);
  border-style: solid;
  border-width: 1px;
}

.c2:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.04);
  border-color: rgba(204,204,204,1);
}

.c2:active {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.08);
  border-color: rgba(204,204,204,1);
}

.c2 + .c1 {
  margin-left: 8px;
}

.c6 + .c1 {
  margin-left: 8px;
}

.c7 + .c1 {
  margin-left: 8px;
}

.c8 + .c1 {
  margin-left: 8px;
}

<button
    className="c0 c1 c2"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="c3 muya-button-prefix"
    >
      <span>
        aa
      </span>
    </span>
    Test
  </button>,
  .c0 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-left: 6px;
}

.c3 .c9 {
  line-height: unset;
}

.c4 + .c1 {
  margin-left: 8px;
}

.c5 + .c1 {
  margin-left: 8px;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
  padding: 0 13px 0 13px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  border-radius: 2px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  cursor: pointer;
  border-color: rgba(204,204,204,1);
  border-style: solid;
  border-width: 1px;
}

.c2:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.04);
  border-color: rgba(204,204,204,1);
}

.c2:active {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.08);
  border-color: rgba(204,204,204,1);
}

.c2 + .c1 {
  margin-left: 8px;
}

.c6 + .c1 {
  margin-left: 8px;
}

.c7 + .c1 {
  margin-left: 8px;
}

.c8 + .c1 {
  margin-left: 8px;
}

<button
    className="c0 c1 c2"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Test
    <span
      className="c3 muya-button-suffix"
    >
      <span>
        aa
      </span>
    </span>
  </button>,
]
`;

exports[`测试 prop block 1`] = `
.c0 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c3 + .c1 {
  margin-left: 8px;
}

.c4 + .c1 {
  margin-left: 8px;
}

.c5 + .c1 {
  margin-left: 8px;
}

.c6 + .c1 {
  margin-left: 8px;
}

.c7 + .c1 {
  margin-left: 8px;
}

.c8 + .c1 {
  margin-left: 8px;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
  padding: 0 13px 0 13px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  width: 100%;
  border-radius: 2px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  cursor: pointer;
  border-color: rgba(204,204,204,1);
  border-style: solid;
  border-width: 1px;
}

.c2:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.04);
  border-color: rgba(204,204,204,1);
}

.c2:active {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.08);
  border-color: rgba(204,204,204,1);
}

.c2 + .c1 {
  margin-left: 8px;
}

<button
  className="c0 c1 c2"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Test
</button>
`;

exports[`测试 prop shape 1`] = `
Array [
  .c0 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c3 + .c1 {
  margin-left: 8px;
}

.c4 + .c1 {
  margin-left: 8px;
}

.c5 + .c1 {
  margin-left: 8px;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
  padding: 0 13px 0 13px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  width: 32px;
  border-radius: 50%;
  color: rgba(102,102,102,1);
  background-color: transparent;
  cursor: pointer;
  border-color: rgba(204,204,204,1);
  border-style: solid;
  border-width: 1px;
}

.c2:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.04);
  border-color: rgba(204,204,204,1);
}

.c2:active {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.08);
  border-color: rgba(204,204,204,1);
}

.c2 + .c1 {
  margin-left: 8px;
}

.c6 + .c1 {
  margin-left: 8px;
}

.c7 + .c1 {
  margin-left: 8px;
}

<button
    className="c0 c1 c2"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Test
  </button>,
  .c0 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c3 + .c1 {
  margin-left: 8px;
}

.c4 + .c1 {
  margin-left: 8px;
}

.c5 + .c1 {
  margin-left: 8px;
}

.c6 + .c1 {
  margin-left: 8px;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
  padding: 0 13px 0 13px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  border-radius: 999rem;
  color: rgba(102,102,102,1);
  background-color: transparent;
  cursor: pointer;
  border-color: rgba(204,204,204,1);
  border-style: solid;
  border-width: 1px;
}

.c2:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.04);
  border-color: rgba(204,204,204,1);
}

.c2:active {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.08);
  border-color: rgba(204,204,204,1);
}

.c2 + .c1 {
  margin-left: 8px;
}

.c7 + .c1 {
  margin-left: 8px;
}

<button
    className="c0 c1 c2"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Test
  </button>,
  .c0 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c3 + .c1 {
  margin-left: 8px;
}

.c4 + .c1 {
  margin-left: 8px;
}

.c5 + .c1 {
  margin-left: 8px;
}

.c6 + .c1 {
  margin-left: 8px;
}

.c7 + .c1 {
  margin-left: 8px;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
  padding: 0 13px 0 13px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  width: 32px;
  border-radius: 2px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  cursor: pointer;
  border-color: rgba(204,204,204,1);
  border-style: solid;
  border-width: 1px;
}

.c2:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.04);
  border-color: rgba(204,204,204,1);
}

.c2:active {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.08);
  border-color: rgba(204,204,204,1);
}

.c2 + .c1 {
  margin-left: 8px;
}

<button
    className="c0 c1 c2"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Test
  </button>,
]
`;

exports[`测试设置按钮 width 1`] = `
Array [
  .c0 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
  padding: 0 13px 0 13px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  width: 200px;
  border-radius: 2px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  cursor: pointer;
  border-color: rgba(204,204,204,1);
  border-style: solid;
  border-width: 1px;
}

.c2:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.04);
  border-color: rgba(204,204,204,1);
}

.c2:active {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.08);
  border-color: rgba(204,204,204,1);
}

.c2 + .c1 {
  margin-left: 8px;
}

.c3 + .c1 {
  margin-left: 8px;
}

<button
    className="c0 c1 c2"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Test
  </button>,
  .c0 {
  outline: 0;
  margin: 0;
  font-family: inherit;
  text-transform: none;
  overflow: visible;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
}

.c3 + .c1 {
  margin-left: 8px;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
  padding: 0 13px 0 13px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  width: 20%;
  border-radius: 2px;
  color: rgba(102,102,102,1);
  background-color: transparent;
  cursor: pointer;
  border-color: rgba(204,204,204,1);
  border-style: solid;
  border-width: 1px;
}

.c2:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.04);
  border-color: rgba(204,204,204,1);
}

.c2:active {
  color: rgba(102,102,102,1);
  background-color: rgba(102,102,102,0.08);
  border-color: rgba(204,204,204,1);
}

.c2 + .c1 {
  margin-left: 8px;
}

<button
    className="c0 c1 c2"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Test
  </button>,
]
`;
